@@ -114,14 +114,14 @@ let mk_parse_value () =
       let raw_parse_fun = Hashtbl.find type_handlers !parser_type in
       match !container with
 	| NoContainer -> raw_parse_fun
-	| HexContainer -> parse_hex_container raw_parse_fun
-	| Base64Container -> Base64.parse_base64_container Base64.AnyHeader raw_parse_fun
+	| HexContainer -> parse_hex_container "hex_container" raw_parse_fun
+	| Base64Container -> Base64.parse_base64_container Base64.AnyHeader "base64_container" raw_parse_fun
 	| PcapTCPContainer port -> fun i ->
 	  PcapContainers.value_of_tcp_container (fun x -> x)
-	    (PcapContainers.parse_tcp_container port raw_parse_fun i)
+	    (PcapContainers.parse_tcp_container port "tcp_container" raw_parse_fun i)
 	| PcapUDPContainer port -> fun i ->
 	  PcapContainers.value_of_udp_container (fun x -> x)
-	    (PcapContainers.parse_udp_container port raw_parse_fun i)
+	    (PcapContainers.parse_udp_container port "udp_container" raw_parse_fun i)
     with
       Not_found -> show_type_list (Some "parser type not found.")
   in fun input ->
