@@ -6,3 +6,4 @@ dns4
 dns5
 dns6
 dns7
+*.byte
