@@ -6,3 +6,4 @@ png4
 png5
 png6
 png7
+*.byte
