@@ -8,3 +8,4 @@ tar6
 tar7
 tar8
 tar9
+*.byte
